--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,12 @@
 
 	<body>
 		<!-- This form is to set the RGB values on the lights -->
-		<form method="post">
-			R <input type="text" name="red"></input>
-			G <input type="text" name="green"></input>
-			B <input type="text" name="blue"></input>
+		<center><form method="post" name="rgb">
+			<input type="tel" name="red" id="red" autocomplete="off"></input><br />
+			<input type="tel" name="green" id="green" autocomplete="off"></input><br />
+			<input type="tel" name="blue" id="blue" autocomplete="off"></input><br />
+			<input type="tel" name="white" id="white" autocomplete="off"></input>
 			<input type="submit" value="Submit"></input>
-		</form>
+		</form></center>
 	</body>
 </html>
